# lcut

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.md  config.status  configure  configure.in  libtool
src/: Makefile.am  Makefile.in  lcut.c  lcut.h
src/example/: Makefile.am  Makefile.in  calculator_test.c  mock_test.c  product_database_test.c  runtests.c  string_test.c
